src/test/deca/context/invalid/cast-incompatible.context
cast-incompatible.deca:5:
